Todas las secciones listas

--- a/src/PagesScreens/servicios/Servicios.scss
+++ b/src/PagesScreens/servicios/Servicios.scss
@@ -3,6 +3,7 @@
         margin-bottom: 70px;
     }
     .presentacionGigFiver {
+        margin: 20px 0;
         .gitFiverLink {
             display: flex;
             justify-content: center;
