--- a/src/StylesConfig/global.scss
+++ b/src/StylesConfig/global.scss
@@ -19,6 +19,7 @@
 @import '../Components/VideoContainer/VideoContainer.scss';
 @import '../Components/MenuNavegationHeader/MenuNavegationHeader.scss';
 @import '../Components/Cards/PortafolioCard/PortafolioCard.scss';
+@import '../Components/Contacto/Contacto.scss';
 
 * {
     margin: 0;
