--- a/src/Components/FotoBanner/FotoBanner.scss
+++ b/src/Components/FotoBanner/FotoBanner.scss
@@ -26,6 +26,7 @@
         h3 {
             margin-top: 5px;
             font-size: 18px;
+            text-align: center;
         }
     }
     :hover {
