Botones de navegación en dev

--- a/src/StylesConfig/global.scss
+++ b/src/StylesConfig/global.scss
@@ -20,6 +20,8 @@
 @import '../Components/MenuNavegationHeader/MenuNavegationHeader.scss';
 @import '../Components/Cards/PortafolioCard/PortafolioCard.scss';
 @import '../Components/Contacto/Contacto.scss';
+@import '../Components/SelectorDePaginaDev/SelectorDePaginaDev.scss';
+@import '../Components/Buttons/ArrowButton1/ArrowButton1.scss';
 
 * {
     margin: 0;
