--- a/src/PagesScreens/servicios/Servicios.scss
+++ b/src/PagesScreens/servicios/Servicios.scss
@@ -2,23 +2,40 @@
     .bannerFotosPrincipal {
         margin-bottom: 70px;
     }
+
     .presentacionGigFiver {
         margin: 20px 0;
+
         .gitFiverLink {
             display: flex;
             justify-content: center;
             flex-wrap: wrap;
+
             img {
                 margin: 10px 0;
-                -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-                -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-                box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+                -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+                box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
             }
+
             .info {
                 margin: 10px;
                 display: flex;
                 align-items: center;
             }
+        }
+    }
+
+    .reseñas {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        img {
+            margin: 10px;
+            -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.75);
+            box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.75);
         }
     }
 }
