--- a/src/PagesScreens/servicios/Servicios.scss
+++ b/src/PagesScreens/servicios/Servicios.scss
@@ -32,6 +32,7 @@
         flex-wrap: wrap;
 
         img {
+            max-width: 100%;
             margin: 10px;
             -webkit-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.75);
             -moz-box-shadow: 0px 0px 10px -5px rgba(0, 0, 0, 0.75);
