--- a/src/StylesConfig/global.scss
+++ b/src/StylesConfig/global.scss
@@ -22,6 +22,7 @@
 @import '../Components/Contacto/Contacto.scss';
 @import '../Components/SelectorDePaginaDev/SelectorDePaginaDev.scss';
 @import '../Components/Buttons/ArrowButton1/ArrowButton1.scss';
+@import '../Components/GlobalArregloFlores/GlobalArregloFlores.scss';
 
 * {
     margin: 0;
