--- a/src/Components/Cards/Card1/Card1.scss
+++ b/src/Components/Cards/Card1/Card1.scss
@@ -37,14 +37,10 @@
     .name-client {
         margin: 0;
         margin-top: 20px;
-        font-weight: 600;
         font-size: 18px;
-    }
-
-    .name-client span {
-        display: block;
-        font-weight: 200;
-        font-size: 16px;
+        p {
+            font-weight: normal;
+        }
     }
 
     .social-media:before {
