Los poemas y versos ahora tienen su propia página

--- a/src/StylesConfig/global.scss
+++ b/src/StylesConfig/global.scss
@@ -7,7 +7,7 @@
 @import '../app/dev/curriculum/curriculumPage.scss';
 @import '../app/dev/portafolio/portafolioPage.scss';
 @import '../app/servicios/Servicios.scss';
-
+@import '../app/write/Escritos.scss';
 // components
 @import '../Components/GlobalHeader/GlobalHeader.scss';
 @import '../Components/FotoBanner/FotoBanner.scss';
