--- a/src/Components/SelectorDePaginaDev/SelectorDePaginaDev.scss
+++ b/src/Components/SelectorDePaginaDev/SelectorDePaginaDev.scss
@@ -7,6 +7,9 @@
     a {
         text-decoration: none;
     }
+    a:hover {
+        text-decoration: none;
+    }
     .turnArrownd {
         transform: rotate(180deg);
     }
